--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,12 @@ h1 {
 	font-size: 24px;
 	}
 	
-.bluebg {
+#two {
 	color: blue;
 	background-color: navy;
 	}
 
-#first {
+#three {
 	font-size: 72px;
 	}	
 
