--- a/css/main.css
+++ b/css/main.css
@@ -9,16 +9,17 @@ h1 {
 	background-color:#3799C8;
 	}
 	
-#one {
+h2 {
+	color:#070707;
 	font-size: 24px;
 	}
 	
-#two {
+h3 {
 	color: blue;
 	background-color: navy;
 	}
 
-#three {
+h4 {
 	font-size: 72px;
 	}	
 
