--- a/box/boxes.css
+++ b/box/boxes.css
@@ -1,2 +1,11 @@
 /* CSS Document */
 
+
+#one {margin: 100px} 
+
+   #2 {padding: 0}
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
